@@ -16,7 +16,7 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 //    id "net.minecraftforge.gradle.forge" version "2.0.2"
 //}
 
-version = "0.1.2"
+version = "0.1.3"
 group = "net.silentchaos512.scalinghealth"
 archivesBaseName = "ScalingHealth-1.9.4"
 
@@ -26,6 +26,8 @@ targetCompatibility = 1.8
 minecraft {
     version = "1.9.4-12.17.0.1976"
     runDir = "eclipse"
+
+    coreMod = "net.silentchaos512.scalinghealth.asm.SHLoadingPlugin"
 
     replace "@VERSION@", project.version
     replaceIn "ScalingHealth.java"
@@ -40,14 +42,12 @@ repositories {
         name = "JEI"
         url "http://dvs1.progwml6.com/files/maven"
     }
-    maven {
-        name = "Guide-API"
-        url = "http://tehnut.info/maven/"
-    }
 }
 
 jar {
-    //classifier = "alpha"
+    manifest {
+        attributes("FMLCorePluginContainsFMLMod": "true", "FMLCorePlugin": "net.silentchaos512.scalinghealth.asm.SHLoadingPlugin")
+    }
 }
 
 dependencies {
